Fix mobile related layout issues (#1945)
* Fixing layout issues on mobile devices

* Kong Studio mobile layout fixes

--- a/app/_assets/stylesheets/pages/docs.less
+++ b/app/_assets/stylesheets/pages/docs.less
@@ -4,7 +4,7 @@
   margin-bottom: 6rem;
   border-bottom: 1px solid @black-10;
 
-  a {
+  > a {
     padding: 0 10px 16px;
     font-size: 16px;
     color: @black-70;
@@ -34,32 +34,68 @@
     @media (max-width: 1100px) {
       margin-bottom: 56px;
     }
+
+    @media (max-width: 768px) {
+      > a {
+        font-size: 14px;
+      }
+    }
   }
 }
 
 .edit-this-page {
-  position: absolute;
-  right: 0;
+  position: relative;
+  right: auto;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+
+  a {
+    padding: 0 0 16px;
+    font-size: 14px;
+
+    i {
+      padding: 4px;
+    }
+  }
 
   &.v2 {
+    padding-bottom: 16px;
+
     a {
       color: rgba(0, 0, 0, 0.35);
       padding: 0;
       border-bottom: none;
       font-weight: 500;
 
+      i {
+        padding: 8px 12px;
+        display: none;
+        margin-top: -12px;
+        margin-left: 4px;
+        font-size: 18px;
+      }
+
       &:hover {
         color: rgba(0, 0, 0, 0.5);
       }
     }
+
+    @media (max-width: 768px) {
+      a {
+        i {
+          display: block;
+        }
+      }
+    }
   }
 
-  @media (max-width: 1100px) {
-    top: 135px;
-    left: 0px;
-  }
-  @media (max-width: 400px) {
-    left: 20px;
+  @media (max-width: 768px) {
+    a {
+      span {
+        display: none;
+      }
+    }
   }
 }
 
@@ -182,7 +218,6 @@
   }
 
   float: right;
-  margin-left: 10px;
   /* auto complete */
 
   .algolia-autocomplete {
@@ -226,7 +261,7 @@
     }
   }
 
-  @media (max-width: @navbar-collapse-point) {
+  @media (max-width: 1080px) {
     float: initial;
     display: inline-block;
     margin-right: 5px;
@@ -272,16 +307,31 @@
   display: flex;
   justify-content: center;
   margin-top: 32px;
+
+  @media (max-width: 476px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .docs-sidebar {
   float: left;
   width: 285px;
   position: sticky;
-  top: 56px;
+  top: 54px;
   height: ~"calc(100vh - 56px)";
   border-right: 1px solid @gray;
   overflow-y: auto;
+
+  .close-sidebar {
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    color: rgba(0, 0, 0, 0.20);
+    font-size: 20px;
+    text-align: right;
+  }
 
   &::-webkit-scrollbar {
     width: 2px;
@@ -323,7 +373,6 @@
 
   @media (max-width: 800px) {
     position: fixed;
-    top: 56px;
     left: 0;
     padding: 0;
     height: ~"calc(100% - 56px)";
@@ -335,6 +384,11 @@
     transform: translateX(-100%);
     -webkit-transform: translateX(-100%);
     transition: all 300ms ease-in-out;
+
+    .close-sidebar {
+      height: auto;
+      padding: 16px;
+    }
 
     &.sidebar-open {
       transform: translateX(0);
@@ -390,10 +444,20 @@
   width: 250px;
   padding: 32px 16px;
   position: sticky;
-  top: 56px;
+  top: 54px;
   height: ~"calc(100vh - 120px)";
   overflow-y: auto;
   box-sizing: border-box;
+
+  .close-sidebar {
+    position: absolute;
+    visibility: hidden;
+    right: 0;
+    top: 0;
+    padding: 16px;
+    color: rgba(0, 0, 0, 0.20);
+    font-size: 20px;
+  }
 
   .docs-toc-title {
     font-size: 14px;
@@ -447,6 +511,25 @@
   }
 
   @media screen and (max-width: 1080px) {
-    display: none;
+    position: fixed;
+    right: 0;
+    padding: 16px 24px;
+    height: ~"calc(100% - 56px)";
+    box-shadow: 0 12px 15px rgba(0, 0, 0, 0.15);
+    border: 0 none;
+    background: #fff;
+    overflow-y: auto;
+    z-index: 100;
+    transform: translateX(-100%);
+    -webkit-transform: translateX(100%);
+    transition: all 300ms ease-in-out;
+
+    .close-sidebar {
+      visibility: visible;
+    }
+
+    &.sidebar-open {
+      transform: translateX(0);
+    }
   }
 }
